finish meal and order routes
